# pixcl

./: CMakeLists.txt  README.md
kernels/: gaussian_blur.cl  grayscale.cl  sepia_filter.cl
src/: clError.hpp  clPipeline.cpp  clPipeline.h  image.cpp  image.h  main.cpp
